--- a/website/app/views/layouts/account_unsigned.html.erb
+++ b/website/app/views/layouts/account_unsigned.html.erb
@@ -10,6 +10,8 @@
   <%= csrf_meta_tags %>
   <%= action_cable_meta_tag %>
 
+  <%= render 'account/shared/static_plugins' %>
+
   <%= stylesheet_link_tag    'account', media: 'all', 'data-turbolinks-track' => 'reload' %>
   <%= javascript_include_tag 'account', 'data-turbolinks-track' => 'reload' %>
 </head>
