--- a/website/app/views/account/shared/_sidebar.html.erb
+++ b/website/app/views/account/shared/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar">
     <li class="active"><a href="index.html#">Overview <span class="sr-only">(current)</span></a></li>
-    <li><a href="index.html#">Reports</a></li>
+    <li><a href="/account/ssh_keys">Reports</a></li>
     <li><a href="index.html#">Analytics</a></li>
     <li><a href="index.html#">Export</a></li>
   </ul>
