--- a/website/app/views/account/shared/_navbar.html.erb
+++ b/website/app/views/account/shared/_navbar.html.erb
@@ -1,17 +1,23 @@
-<nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
-  <button type="button" class="navbar-toggler hidden-sm-up" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button>
-  <a class="navbar-brand" href="index.html#">Project name</a>
-  <div id="navbar">
-    <nav class="nav navbar-nav pull-left">
-      <a class="nav-item nav-link" href="index.html#">Dashboard</a>
-      <a class="nav-item nav-link" href="index.html#">Settings</a>
-      <a class="nav-item nav-link" href="index.html#">Profile</a>
-      <a class="nav-item nav-link" href="index.html#">Help</a>
-    </nav>
+<nav class="navbar navbar-fixed-top navbar-dark bg-blue">
+  <a class="navbar-brand" href="javascript:void(0);">Navbar</a>
+  <div class="collapse navbar-toggleable-xs" id="collapsingNavbar">
+    <ul class="nav navbar-nav">
+      <li class="nav-item active">
+        <a href="<%= account_root_path %>" class="nav-link"><%= t('App.dashbord', defeault: 'Dashbord') %></a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link"><%= t('App.profile', defeault: 'Profile') %></a>
+      </li>
+    </ul>
+
+    <ul class="nav navbar-nav pull-right">
+      <li class="nav-item">
+        <% if current_account.present? %>
+          <a class="nav-link" href="<%= destroy_account_session_path %>" data-method="delete"><%= t('App.logout', default: 'Logout')%></a>
+        <% else %>
+          <a class="nav-link" href="<%= new_account_session_path %>"><%= t('App.login', default: 'Login')%></a>
+        <% end %>
+      </li>
+    </ul>
   </div>
 </nav>
