--- a/website/app/views/account/shared/_sidebar.html.erb
+++ b/website/app/views/account/shared/_sidebar.html.erb
@@ -1,20 +1,22 @@
-<div class="col-sm-3 col-md-2 sidebar">
-  <ul class="nav nav-sidebar">
-    <li class="active"><a href="index.html#">Overview <span class="sr-only">(current)</span></a></li>
-    <li><a href="/account/ssh_keys">Reports</a></li>
-    <li><a href="index.html#">Analytics</a></li>
-    <li><a href="index.html#">Export</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a href="index.html">Nav item</a></li>
-    <li><a href="index.html">Nav item again</a></li>
-    <li><a href="index.html">One more nav</a></li>
-    <li><a href="index.html">Another nav item</a></li>
-    <li><a href="index.html">More navigation</a></li>
-  </ul>
-  <ul class="nav nav-sidebar">
-    <li><a href="index.html">Nav item again</a></li>
-    <li><a href="index.html">One more nav</a></li>
-    <li><a href="index.html">Another nav item</a></li>
+<div id="sidebar-wrapper">
+  <ul class="sidebar-nav">
+    <li id="sidebar-control" class="bg-taggle">
+      <a href="#">
+         Toggle ☰
+      </a>
+    </li>
+    <li>
+      <a href="/account/ssh_keys"><%= t('App.ssh_keys', default: 'SshKeys')%></a>
+    </li>
+    <li>
+      <a href="#"><%= t('App.two_factor', default: 'TowFactor')%></a>
+    </li>
   </ul>
 </div>
+
+<script>
+  $("#sidebar-control").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+  });
+</script>
