--- a/website/app/views/account/shared/_static_plugins.html.erb
+++ b/website/app/views/account/shared/_static_plugins.html.erb
@@ -2,6 +2,8 @@
 
 <link rel="stylesheet" media="all" href="/static/plugins/tether-1.2.0/dist/css/tether.min.css" data-turbolinks-track="reload">
 
+<link rel="stylesheet" media="all" href="/static/plugins/font-awesome-4.3.0/css/font-awesome.min.css" data-turbolinks-track="reload">
+
 
 
 <script type="text/javascript" src="/static/plugins/jquery-2.2.2/dist/jquery.min.js" data-turbolinks-track="reload"></script>
