--- a/website/app/views/layouts/account_unsigned.html.erb
+++ b/website/app/views/layouts/account_unsigned.html.erb
@@ -19,14 +19,10 @@
 <body>
   <%= render 'account/shared/navbar' %>
 
-  <div class="container-fluid">
-    <div class="row">
-
-      <div class="main">
-        <%= render 'account/shared/flash' %>
-        <%= yield %>
-      </div>
-
+  <div class="container-fluid" id="main">
+    <div class="row row-offcanvas row-offcanvas-left">
+      <%= render 'account/shared/flash' %>
+      <%= yield %>
     </div>
   </div>
 
