--- a/website/app/views/account/shared/_sidebar.html.erb
+++ b/website/app/views/account/shared/_sidebar.html.erb
@@ -6,10 +6,10 @@
       </a>
     </li>
     <li>
-      <a href="/account/ssh_keys"><%= t('App.ssh_keys', default: 'SshKeys')%></a>
+      <a href="/account/ssh_keys"><%= t('App.ssh_keys', default: 'Ssh Keys')%></a>
     </li>
     <li>
-      <a href="#"><%= t('App.two_factor', default: 'TowFactor')%></a>
+      <a href="/account/two_factor"><%= t('App.two_factor', default: 'Tow Factor')%></a>
     </li>
   </ul>
 </div>
