--- a/website/app/views/account/shared/_sidebar.html.erb
+++ b/website/app/views/account/shared/_sidebar.html.erb
@@ -6,10 +6,10 @@
       </a>
     </li>
     <li>
-      <a href="/account/ssh_keys"><%= t('app.ssh_keys', default: 'Ssh Keys')%></a>
+      <a href="/account/ssh_keys"><%= t('app.ssh_keys', default: 'SSH keys')%></a>
     </li>
     <li>
-      <a href="/account/two_factor"><%= t('app.two_factor', default: 'Two Factor')%></a>
+      <a href="/account/two_factor_authentication"><%= t('app.two_factor', default: 'Two-factor authentication')%></a>
     </li>
   </ul>
 </div>
