--- a/website/app/views/account/shared/_navbar.html.erb
+++ b/website/app/views/account/shared/_navbar.html.erb
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-fixed-top navbar-dark bg-blue">
   <a class="navbar-brand" href="javascript:void(0);">Navbar</a>
   <div class="collapse navbar-toggleable-xs" id="collapsingNavbar">
-    <% if current_account.present? %>
+    <% if account_signed_in? %>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
-          <a href="<%= account_root_path %>" class="nav-link"><%= t('view.dashboard', default: 'Dashboard') %></a>
+          <a href="<%= account_root_path %>" class="nav-link"><%= t(' view.navbar.dashboard', default: 'Dashboard') %></a>
         </li>
         <li class="nav-item">
-          <a href="/account/profile" class="nav-link"><%= t('view.profile', default: 'Profile') %></a>
+          <a href="/account/profile" class="nav-link"><%= t(' view.navbar.profile', default: 'Profile') %></a>
         </li>
-        <% if policy(:admin_module).manage_hosts? %>
+        <% if policy(current_account.hosts.build).index? %>
           <li class="nav-item">
-            <a href="/account/hosts" class="nav-link"><%= t('view.hosts', default: 'Hosts')%></a>
+            <a href="/account/hosts" class="nav-link"><%= t(' view.navbar.hosts', default: 'Hosts')%></a>
           </li>
         <% end %>
       </ul>
@@ -19,10 +19,10 @@
 
     <ul class="nav navbar-nav pull-right">
       <li class="nav-item">
-        <% if current_account.present? %>
-          <a class="nav-link" href="<%= destroy_account_session_path %>" data-method="delete"><%= t('view.logout', default: 'Sign out')%></a>
+        <% if account_signed_in? %>
+          <a class="nav-link" href="<%= destroy_account_session_path %>" data-method="delete"><%= t(' view.navbar.logout', default: 'Sign out')%></a>
         <% else %>
-          <a class="nav-link" href="<%= new_account_session_path %>"><%= t('view.login', default: 'Login')%></a>
+          <a class="nav-link" href="<%= new_account_session_path %>"><%= t(' view.navbar.login', default: 'Login')%></a>
         <% end %>
       </li>
     </ul>
