--- a/website/app/views/layouts/account_signed.html.erb
+++ b/website/app/views/layouts/account_signed.html.erb
@@ -21,9 +21,9 @@
   <div id="wrapper">
     <%= render 'account/shared/sidebar' %>
 
-    <div class="container-fluid">
-      <div class="row row-offcanvas row-offcanvas-left">
-        <div class="col-md-9 col-lg-10 main">
+    <div id="page-content-wrapper">
+      <div class="container-fluid">
+        <div class="col-md-9 col-lg-11">
           <%= render 'account/shared/flash' %>
           <%= yield %>
 
