add policies and spec

--- a/website/app/views/account/shared/_sidebar.html.erb
+++ b/website/app/views/account/shared/_sidebar.html.erb
@@ -1,10 +1,25 @@
 <div id="sidebar-wrapper">
   <ul class="sidebar-nav">
+
+    <% if policy(BastionHost.new).index? %>
+    <li class="nav-item">
+      <a href="/account/bastion_hosts" class="nav-link"><%= t('view.sidebar.bastion_hosts', default: 'Bastion hosts')%></a>
+    </li>
+    <% end %>
+
+    <% if policy(Host.new).index? %>
+    <li class="nav-item">
+      <a href="/account/hosts" class="nav-link"><%= t('view.sidebar.hosts', default: 'Hosts')%></a>
+    </li>
+    <% end %>
+
     <li>
       <a href="/account/ssh_keys"><%= t('view.sidebar.ssh_keys', default: 'SSH keys')%></a>
     </li>
     <li>
-      <a href="/account/two_factor_authentication"><%= t('view.sidebar.two_factor', default: 'Two-factor authentication')%></a>
+      <a href="/account/two_factor_authentication"><%= t('view.sidebar.two_factor_authentication', default: 'Two-factor authentication')%></a>
     </li>
+
+
   </ul>
 </div>
