--- a/website/app/views/account/account_ssh_keys/index.html.erb
+++ b/website/app/views/account/account_ssh_keys/index.html.erb
@@ -11,7 +11,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <% if @ssh_keys.blank? %>
+    <% if @account_ssh_keys.blank? %>
       <p>There are no SSH keys with access to your account.</p>
     <% end %>
   </div>
@@ -28,11 +28,11 @@
         </tr>
       </thead>
       <tbody>
-        <% @ssh_keys.each do |ssh_key|%>
+        <% @account_ssh_keys.each do |account_ssh_key|%>
           <tr>
-            <td><%= ssh_key.title %></td>
-            <td><% %></td>
-            <td><a href="<%= account_ssh_key_path(ssh_key) %>" data-method="delete" class="btn btn-danger btn-sm"><%= t('view.destroy', default: 'Delete')%></td>
+            <td><%= account_ssh_key.title %></td>
+            <td><%= account_ssh_key.fingerprint %></td>
+            <td><a href="<%= account_account_ssh_key_path(account_ssh_key.id) %>" data-method="delete" class="btn btn-danger btn-sm"><%= t('view.destroy', default: 'Delete')%></td>
           </tr>
         <% end %>
       </tbody>
@@ -40,20 +40,17 @@
   </div>
 </div>
 
-<div class="row" id="add_ssh_key_form" style="display: none;">
-  <div class="col-md-12">
-    <%= simple_form_for [current_account.ssh_keys.new] do |f|%>
-      <%= f.input :title %>
-      <%= f.input :key, as: :text%>
-      <%= f.submit t('view.submit', default: 'Add SSH key'), class: 'btn btn-sm btn-primary'%>
-    <% end %>
-  </div>
-</div>
+<%= simple_form_for [:account, @account_ssh_key], html: {id: 'new_account_ssh_key', style: "display: #{@account_ssh_keys.exists? ? 'none' : 'block'}"} do |f|%>
+  <%= f.input :title %>
+  <%= f.input :key, as: :text%>
+  <%= f.submit t('view.submit', default: 'Add SSH key'), class: 'btn btn-sm btn-primary'%>
+<% end %>
+
 
 <script>
 $(document).on('ready page:load', function() {
   $('button#add_ssh_key').on('click', function() {
-    $('#add_ssh_key_form').toggle();
+    $('form#new_account_ssh_key').show();
   })
 });
 </script>
