--- a/website/app/views/account/account_ssh_keys/index.html.erb
+++ b/website/app/views/account/account_ssh_keys/index.html.erb
@@ -13,34 +13,30 @@
   <div class="col-md-12">
     <% if @account_ssh_keys.blank? %>
       <p>There are no SSH keys with access to your account.</p>
+    <% else %>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th><%= AccountSshKey.human_attribute_name(:title) %></th>
+            <th><%= t('view.ssh.fingerprint', default: 'ssh Fingerprint') %></th>
+            <th><%= t('view.handle', default: 'handle')%></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @account_ssh_keys.each do |account_ssh_key|%>
+            <tr>
+              <td><%= account_ssh_key.title %></td>
+              <td><%= account_ssh_key.fingerprint %></td>
+              <td><a href="<%= account_account_ssh_key_path(account_ssh_key.id) %>" data-method="delete" class="btn btn-danger btn-sm"><%= t('view.destroy', default: 'Delete')%></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     <% end %>
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-12 table-responsive">
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th><%= AccountSshKey.human_attribute_name(:title) %></th>
-          <th><%= t('view.ssh.fingerprint', default: 'ssh Fingerprint') %></th>
-          <th><%= t('view.handle', default: 'handle')%></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @account_ssh_keys.each do |account_ssh_key|%>
-          <tr>
-            <td><%= account_ssh_key.title %></td>
-            <td><%= account_ssh_key.fingerprint %></td>
-            <td><a href="<%= account_account_ssh_key_path(account_ssh_key.id) %>" data-method="delete" class="btn btn-danger btn-sm"><%= t('view.destroy', default: 'Delete')%></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<%= simple_form_for [:account, @account_ssh_key], html: {id: 'new_account_ssh_key', style: "display: #{@account_ssh_keys.exists? ? 'none' : 'block'}"} do |f|%>
+<%= simple_form_for [:account, @account_ssh_key], html: {id: 'new_account_ssh_key', style: "display: #{@account_ssh_keys.blank? ? 'block' : 'none'}"} do |f|%>
   <%= f.input :title %>
   <%= f.input :key, as: :text%>
   <%= f.submit t('view.submit', default: 'Add SSH key'), class: 'btn btn-sm btn-primary'%>
