--- a/website/app/views/account/account_ssh_keys/index.html.erb
+++ b/website/app/views/account/account_ssh_keys/index.html.erb
@@ -11,7 +11,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <% if @account_ssh_keys.blank? %>
+    <% if @account_ssh_keys.count == 0 %>
       <p>There are no SSH keys with access to your account.</p>
     <% else %>
       <table class="table table-striped table-hover">
