--- a/website/app/views/layouts/application.html.erb
+++ b/website/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SshBastion</title>
+    <title>SSH Bastion</title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
 
