--- a/website/app/views/account/shared/_navbar.html.erb
+++ b/website/app/views/account/shared/_navbar.html.erb
@@ -1,25 +1,27 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-blue">
-  <a class="navbar-brand" href="javascript:void(0);">Navbar</a>
+<nav class="navbar navbar-fixed-top navbar-dark bg-primary">
+  <button class="navbar-toggler hidden-sm-up pull-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+    ☰
+  </button>
+  <a class="navbar-brand" href="#">SSH Bastion</a>
   <div class="collapse navbar-toggleable-xs" id="collapsingNavbar">
-    <% if account_signed_in? %>
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a href="<%= account_root_path %>" class="nav-link"><%= t('view.navbar.dashboard', default: 'Dashboard') %></a>
-        </li>
-        <li class="nav-item">
-          <a href="/account/profile" class="nav-link"><%= t('view.navbar.profile', default: 'Profile') %></a>
-        </li>
-      </ul>
-    <% end %>
-
     <ul class="nav navbar-nav pull-right">
-      <li class="nav-item">
-        <% if account_signed_in? %>
-          <a class="nav-link" href="<%= destroy_account_session_path %>" data-method="delete"><%= t('view.navbar.logout', default: 'Sign out')%></a>
-        <% else %>
-          <a class="nav-link" href="<%= new_account_session_path %>"><%= t('view.navbar.login', default: 'Login')%></a>
-        <% end %>
+      <% if account_signed_in? %>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="<%= account_root_path %>"><%= t('view.navbar.dashboard', default: 'Dashboard') %></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/account/profile"><%= t('view.navbar.profile', default: 'Profile') %></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= destroy_account_session_path %>" data-method="delete"><%= t('view.navbar.sign_out', default: 'Sign out')%></a>
+      </li>
+      <% else %>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= new_account_session_path %>"><%= t('view.navbar.sign_in', default: 'Sign in')%></a>
+      </li>
+      <% end %>
     </ul>
   </div>
 </nav>
+
