--- a/website/app/views/account/shared/_navbar.html.erb
+++ b/website/app/views/account/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
     <ul class="nav navbar-nav pull-right">
       <% if account_signed_in? %>
 
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="<%= account_root_path %>"><%= t('view.navbar.dashboard', default: 'Dashboard') %></a>
       </li>
       <li class="nav-item">
