--- a/website/app/views/account/profiles/show.html.erb
+++ b/website/app/views/account/profiles/show.html.erb
@@ -13,7 +13,7 @@
   <div class="form-group">
     <label class="col-sm-3"></label>
     <div class="col-sm-9">
-      <%= f.submit t('view.submit', default: 'Submit'), class: 'btn btn-sm btn-primary'%>
+      <%= f.submit t('view.submit'), class: 'btn btn-sm btn-primary'%>
     </div>
   </div>
 <% end %>
