--- a/website/app/views/account/account_ssh_keys/index.html.erb
+++ b/website/app/views/account/account_ssh_keys/index.html.erb
@@ -18,7 +18,7 @@
         <thead>
           <tr>
             <th><%= AccountSshKey.human_attribute_name(:title) %></th>
-            <th><%= t('view.ssh.fingerprint') %></th>
+            <th><%= AccountSshKey.human_attribute_name(:fingerprint) %></th>
             <th><%= t('view.handle') %></th>
           </tr>
         </thead>
@@ -44,7 +44,7 @@
   <div class="form-group">
     <label class="col-sm-3"></label>
     <div class="col-sm-9">
-      <%= f.submit t('view.ssh_key.submit'), class: 'btn btn-sm btn-primary'%>
+      <%= f.submit class: 'btn btn-sm btn-primary'%>
     </div>
   </div>
 
