feat: half host crud

--- a/website/app/views/account/shared/_sidebar.html.erb
+++ b/website/app/views/account/shared/_sidebar.html.erb
@@ -8,7 +8,7 @@
 
     <% if policy(Host.new).index? %>
     <li class="nav-item">
-      <a href="/account/hosts" class="nav-link"><%= t('view.sidebar.hosts')%></a>
+      <a href="/account/hosts" class="nav-link <%= 'active' if account_nav_is?(:hosts) %>"><%= t('view.sidebar.hosts')%></a>
     </li>
     <% end %>
 
