--- a/website/app/views/account/hosts/index.html.erb
+++ b/website/app/views/account/hosts/index.html.erb
@@ -1,12 +1,10 @@
 <div class="row sub-header">
   <div class="col-md-10">
-    <h2>SSH keys</h2>
+    <h2>Hosts</h2>
   </div>
-  <% if policy(@hosts).handle? %>
-    <div class="col-md-2">
-      <a href="<%= new_account_host_path %>" class="btn btn-primary">New Host</a>
-    </div>
-  <% end %>
+  <div class="col-md-2">
+    <a href="<%= new_account_host_path %>" class="btn btn-primary">New Host</a>
+  </div>
 </div>
 
 <div class="row">
@@ -38,4 +36,5 @@
       </table>
     <% end %>
   </div>
+</div>
 
