--- a/website/app/views/account/two_factor_authentications/_form.html.erb
+++ b/website/app/views/account/two_factor_authentications/_form.html.erb
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <%= simple_form_for [:account, current_account], url: account_two_factor_authentication_path, wrapper: :horizontal_form do |f| %>
+    <%= simple_form_for [:account, current_account], url: account_two_factor_authentication_path, wrapper: :horizontal_form, method: :post do |f| %>
       <%= f.input :otp_attempt %>
 
       <div class="form-group">
