--- a/website/app/views/account/shared/_sidebar.html.erb
+++ b/website/app/views/account/shared/_sidebar.html.erb
@@ -16,7 +16,7 @@
       <a href="/account/ssh_keys" class="nav-link <%= 'active' if account_nav_is?(:account_ssh_keys) %>"><%= t('view.sidebar.ssh_keys')%></a>
     </li>
     <li class="nav-item">
-      <a href="/account/two_factor_authentication" class="nav-link"><%= t('view.sidebar.two_factor_authentication')%></a>
+      <a href="/account/two_factor_authentication" class="nav-link <%= 'active' if account_nav_is?(:two_factor_authentication) %>"><%= t('view.sidebar.two_factor_authentication')%></a>
     </li>
   </ul>
 </div>
