--- a/website/app/views/account/two_factor_authentications/show.html.erb
+++ b/website/app/views/account/two_factor_authentications/show.html.erb
@@ -25,6 +25,7 @@
     <% else %>
       <a href="<%= reset_account_two_factor_authentication_path %>" class="btn btn-primary">Reset</a>
       <a href="<%= recovery_codes_account_two_factor_authentication_path %>" class="btn btn-primary" data-method="patch">Download recovery codes</a>
+      <a href="<%= account_two_factor_authentication_path %>" data-method="delete" class="btn btn-danger btn-sm" data-confirm="<%= t('view.are_you_sure_to_disable') %>"><%= t('view.disable')%></a>
     <% end %>
   </div>
 </div>
