feat: add download at for only can download once

--- a/website/app/views/account/two_factor_authentications/_form.html.erb
+++ b/website/app/views/account/two_factor_authentications/_form.html.erb
@@ -5,9 +5,9 @@
     <h4>1. Scan barcode</h4>
     <p class="text-center"><%= image_tag current_account.qr_code, alt: 'authentication device code' %></p>
     <p>Itunes app for barcode image
-     <a href="https://itunes.apple.com/us/app/duo-mobile/id422663827?mt=8">duo mobile</a> <a href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">google authentication</a></p>
+     <a href="https://itunes.apple.com/us/app/duo-mobile/id422663827?mt=8">duo mobile</a> | <a href="https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8">google authentication</a></p>
     <p>Google play app for barcode image
-     <a href="https://play.google.com/store/apps/details?id=com.duosecurity.duomobile">duo mobile</a> <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2">google authentication</a></p>
+     <a href="https://play.google.com/store/apps/details?id=com.duosecurity.duomobile">duo mobile</a> | <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2">google authentication</a></p>
     <p>After scanning the barcode image, the app will display a six-digit code that you can enter below.</p>
   </div>
 </div>
