--- a/website/app/views/account/two_factor_authentications/show.html.erb
+++ b/website/app/views/account/two_factor_authentications/show.html.erb
@@ -7,7 +7,7 @@
           status:
         </div>
         <div class="col-md-2">
-          <% if policy(current_account).new? %>
+          <% if policy(current_account).enabled_two_factor_authentication? %>
             <div class="text-danger">Off</div>
           <% else %>
             <div class="text-info">On</div>
@@ -20,7 +20,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <% if policy(current_account).new? %>
+    <% if policy(current_account).enabled_two_factor_authentication? %>
       <a href="<%= new_account_two_factor_authentication_path %>" class="btn btn-primary">Enabel Two-factor Authorization</a>
     <% else %>
       <a href="<%= reset_account_two_factor_authentication_path %>" class="btn btn-primary">Reset with recovery codes</a>
