--- a/ansible/templates/website_settings_local.yml.j2
+++ b/ansible/templates/website_settings_local.yml.j2
@@ -2,6 +2,7 @@ time_zone: "Asia/Shanghai"
 
 website_gpg_key:
   public_asc: |
-    {{ lookup('file', 'backup/local_website_host/gpg_key/public_asc') }}
+    {{ lookup('file', 'backup/local_website_host/gpg_key/public_asc') | split('\n') | join("\n    ") }}
+
   public_id: "{{ lookup('file', 'backup/local_website_host/gpg_key/public_id') }}"
 
