--- a/ansible/templates/website_settings_local.yml.j2
+++ b/ansible/templates/website_settings_local.yml.j2
@@ -1,8 +1,43 @@
-time_zone: "Asia/Shanghai"
+time_zone: "{{ time_zone }}"
 
-website_gpg_key:
-  public_asc: |
-    {{ lookup('file', 'backup/local_website_host/gpg_key/public_asc') | split('\n') | join("\n    ") }}
+url:
+  host: "{{ web_url.host }}"
+  port: "{{ web_url.port }}"
 
-  public_id: "{{ lookup('file', 'backup/local_website_host/gpg_key/public_id') }}"
+db:
+  adapter: "{{ web_db.adapter }}"
+  host: "{{ web_db.host }}"
+  username: "{{ web_db.username }}"
+  password: "{{ web_db.password }}"
+  database: "{{ web_db.database }}"
+
+smtp:
+  host: "{{ web_smtp.host }}"
+  port: "{{ web_smtp.port }}"
+
+redis:
+  host: "{{ web_redis.host }}"
+  port: "{{ web_redis.port }}"
+
+host:
+  user: "{{ web_host.user }}"
+  gpg_key:
+    public_asc: |
+      {{ lookup('file', 'backup/web_host/gpg_key/public_asc') | split('\n') | join("\n      ") }}
+    public_id: "{{ lookup('file', 'backup/web_host/gpg_key/public_id') }}"
+
+bastion_host:
+  ip: "{{ bastion_host.ip }}"
+  user: "{{ bastion_host.user }}"
+  gpg_key:
+    public_asc: |
+      {{ lookup('file', 'backup/bastion_host/gpg_key/public_asc') | split('\n') | join("\n      ") }}
+    public_id: "{{ lookup('file', 'backup/bastion_host/gpg_key/public_id') }}"
+  ssh_key:
+    public: |
+      {{ lookup('file', 'backup/bastion_host/ssh_key/id_rsa.pub') | split('\n') | join("\n      ") }}
+
+remote_host:
+  ip: "{{ remote_host.ip }}"
+  user: "{{ remote_host.user }}"
 
