--- a/web_host/website/app/views/account/hosts/index.html.erb
+++ b/web_host/website/app/views/account/hosts/index.html.erb
@@ -3,7 +3,7 @@
     <h2>Hosts</h2>
   </div>
   <div class="col-md-2">
-    <% if policy(current_account.hosts.build).new? %>
+    <% if policy(current_account.own_hosts.build).new? %>
       <a href="<%= new_account_host_path %>" class="btn btn-primary">New Host</a>
     <% else %>
       <a href="javascript:void(0);" class="btn btn-primary disabled">New Host</a>
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<% if policy(current_account.hosts.build).new? %>
+<% if policy(current_account.own_hosts.build).new? %>
   <div class="row">
     <div class="col-md-12">
       <% if @hosts.blank? %>
